Don’t force index.html into root redirect

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html><html><head>
-<meta http-equiv="refresh" content="0; url=https://pympress.github.io/index.html">
-<link rel="canonical" href="https://pympress.github.io/index.html" />
+<meta http-equiv="refresh" content="0; url=https://pympress.github.io/">
+<link rel="canonical" href="https://pympress.github.io/" />
 </head><body></body></html>
